--- a/styles.css
+++ b/styles.css
@@ -8,9 +8,9 @@
 
 body {
     font-family: 'Eurostile', sans-serif;
+    text-align: center;
     background-color: #1E1E1E;
     color: white;
-    text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -21,16 +21,10 @@ body {
     padding: 20px;
 }
 
-.container {
-    width: 1720px;
-    height: 880px;
-    padding: 100px;
-    background-color: #1E1E1E;
-    text-align: center;
-}
-
-.logo {
-    width: 300px;
+#heading {
+    font-size: 10vw;
+    font-weight: bold;
+    text-decoration: underline;
     margin-bottom: 20px;
 }
 
@@ -54,60 +48,82 @@ body {
     text-align: right;
 }
 
-.content {
+.container {
+    background: #1e1e1e;
+    padding: 5vh;
+    border-radius: 15px;
+    width: 100%;
+    max-width: 90%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-}
-
-.mascot {
-    width: 250px;
-    margin-right: 50px;
-}
-
-.controls {
-    display: flex;
-    align-items: center;
-}
-
-.btn {
-    background: none;
-    border: none;
-    cursor: pointer;
-}
-
-.btn img {
-    width: 50px;
-}
-
-.count {
-    font-size: 48px;
-    margin: 0 20px;
-    color: #FFD323;
-    font-weight: bold;
-    text-shadow: 2px 2px 4px red, -2px -2px 4px red, 2px -2px 4px red, -2px 2px 4px red;
-}
-
-.info-container {
-    margin-top: 20px;
+    box-sizing: border-box;
 }
 
 .info {
     font-size: 6vw;
     margin: 3vh 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 2vw;
 }
 
 .data {
     font-size: 8vw;
     font-weight: bold;
     color: white;
+    text-shadow: 2px 2px 4px red, -2px -2px 4px red, 2px -2px 4px red, -2px 2px 4px red;
 }
 
+.button {
+    width: 6vw;
+    height: 6vw;
+    font-size: 4vw;
+    font-weight: bold;
+    color: white;
+    background-color: transparent;
+    border: none;
+    border-radius: 0%;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 0.3s;
+}
+
+.button img {
+    width: 100%;
+    height: auto;
+}
+
+.increase {
+    color: lightgreen;
+}
+
+.increase:hover {
+    background-color: lightgreen;
+    color: black;
+}
+
+.decrease {
+    color: red;
+}
+
+.decrease:hover {
+    background-color: red;
+    color: white;
+}
+
+.button:focus {
+    outline: none;
+}
+
+/* Adjustments for smaller screens */
 @media (max-width: 768px) {
-    .date-time-container {
-        font-size: 5vw;
-        width: 100%;
-        padding: 0 5vw;
+    #heading {
+        font-size: 12vw;
     }
     .info {
         font-size: 8vw;
@@ -115,13 +131,30 @@ body {
     .data {
         font-size: 10vw;
     }
+    .button {
+        font-size: 6vw;
+        padding: 1.5vw 3vw;
+    }
 }
 
 @media (max-width: 480px) {
+    #heading {
+        font-size: 14vw;
+    }
     .info {
         font-size: 10vw;
     }
     .data {
         font-size: 12vw;
+    }
+    .button {
+        font-size: 7vw;
+        padding: 2vw 4vw;
+    }
+
+    .date-time-container {
+        font-size: 5vw;
+        width: 100%;
+        padding: 0 5vw;
     }
 }
